# api/index.js
@@ -5,7 +5,10 @@ exports.init = (router) => {
     router.post('/api/user',user.signup);
     router.post('/api/user/auth', user.signin);
     router.get('/api/user',user.getUser);
-    router.post('/api/admin/courses',courses.course);
-    router.post('/api/user/testimonial',testimonial.review);
+    router.post('/api/course',courses.course);
+    router.get('/api/course',courses.getCourse);    
+    router.get('/api/course/:id',courses.getCourseById);    
+    router.post('/api/review',testimonial.review);
+    router.get('/api/review',testimonial.getTestimonial);
 }
 
